Archive2/ba/46c9e6a7e6c44d/output
main.cpp:15:13: warning: unused parameter 'a' [-Wunused-parameter]
        A(const A& a)
                   ^
main.cpp:34:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 warning and 1 error generated.
